# autoseeker

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/actors/driven/: file_saver.rs
src/actors/driven/brightdata/: client.rs  jobs.rs  snapshots.rs
src/actors/driving/cli/: commands.rs  handler.rs  snapshot_table.rs
src/adapters/driven/: indeed_brightdata.rs  linkedin_brightdata.rs
src/app/ports/: driven.rs  driving.rs  types.rs
src/app/services/: indeed_job.rs  indeed_snapshot.rs  job.rs  linkedin_snapshot.rs  snapshot.rs
